# cognigate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  cognigate.db  docker-compose.yml  mutmut_config.py  pyproject.toml  requirements.txt  vercel.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sbom.yml
api/: index.py
app/: __init__.py  config.py  constants_bridge.py  main.py  theme.py
app/core/: __init__.py  async_logger.py  auth.py  cache.py  circuit_breaker.py  control_health.py  critic.py  evidence_hook.py  evidence_mapper.py  federation.py  monte_carlo.py  policy_engine.py  self_healing.py  (+8 more)
docs/: API.md  evidence-schema.md
migrations/: env.py
scripts/: generate-sbom.sh  generate_theme_css.py
tests/: conftest.py  test_admin.py  test_adversarial.py  test_agents.py  test_async_logger.py  test_auth.py  test_auth_keys.py  test_cache.py  test_cache_unit.py  test_chaos.py  test_circuit_breaker.py  test_compliance.py  test_constants_bridge.py  test_critic.py  test_database.py  test_deepspace.py  test_e2e_pipeline.py  test_enforce.py  test_gateway.py  test_hardening.py  test_health.py  test_hello.py  test_intent.py  test_invariants.py  test_monte_carlo.py  test_policy_engine.py  test_proof_integration.py  test_proof_repository.py  test_proof_router.py  test_property.py  test_reference.py  test_regressions.py  test_self_healing.py  test_signatures.py  test_tmr_consensus.py  test_tools_pages.py  test_tripwires.py  test_trust.py  test_trust_decay.py  test_upstream_client.py  (+2 more)
(+30 files in other folders)
